terraform/product/modules/bootstrap/01-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: client1-webapp
  name: client1-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      run: client1-webapp
  template:
    metadata:
      labels:
        run: client1-webapp
    spec:
      containers:
      - image: nginx
        name: webapp
        volumeMounts:
        - name: index
          mountPath: "/usr/share/nginx/html"                  
      volumes:
        - name: index
          configMap:
            name: client1-html
