terraform/product/modules/bootstrap/01-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client1-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: client1-webapp
  type: ClusterIP
